    textarea right under corner at (-1:4)
    textsize 22
    is editable
    preprint text is "change this text"
    inputfield -5,5,4,1,helvetica,22,red,green
-corrected color mixup in grid
-corrected x/y-scale syntax bug
    xscale x1,x1_name,x2,x2_name,x3,x3_name.....,fontsize,fontname,fontcolor,tickmark_linewidth
        
22/3/2010                                                                                                                                  
-added scalelatex x,y,width,height,latexstring,[optional] bgcolor,fgcolor,bg_alpha,fg_alpha                                                
    scale the lateximage to width,height in coordinate system xrange/yrange                           
    Attention: this may lead to very poor readability [the fontsizes are limited to the latex defaults [max 12] 

-changed latex syntax : now the optional bgcolor and fgcolor may have alpha channel
    latex x,y,latexstring,[optional] bgcolor,fgcolor,bg_alpha,fg_alpha
    defaults are applet bgcolor and "draw color" [clickcolor]        

14/5/2010
-added \euro to atp library : 
    latex x,y,\frac{100 ^{3 \times \euro }}{4 \cdot \euro },[optional] bgcolor,fgcolor,bg_alpha,fg_alpha

18/5/2010
-added "inputs/inputfields" for the amount of inputfields required [if not set: default=20]
    inputs 24
    inputfields 4
20/8/2010
-added xlabel/ylabel
    xlabel "label_of_x-axis",fontsize [,fontname,color,alpha]
    xlabel x axis,14,times,red,160   
     
    ylabel label_of_y-axis,fontsize [,fontname,color,alpha]
    ylabel y axis,12    
    
    label of y_axis is always horizontal
21/8/2010
-changed xlabel position [closer to x-axis]

8/11/2010
- forgotten to implement userdraw  filledpoly / fpoly

9/9/2011
- added to interactive mode: mlines (multilines) ; used for drawing multiple segments in the applet
 use ReadDrawing() via javascript or X.Gang's inputapplet mode to read data (x1,y1,x2,y2,x3,y3...xn,yn)

17/1/2011
- added modified syntax for x/y-logscale
     