@@ -95,6 +95,8 @@ CHANGELOG
 - added to interactive mode: mlines (multilines) ; used for drawing multiple segments in the applet
  use ReadDrawing() via javascript or X.Gang's inputapplet mode to read data (x1,y1,x2,y2,x3,y3...xn,yn)
 
-17/1/2011
+17/1/2012
 - added modified syntax for x/y-logscale
      
+25/1/2012
+- only editable inputfields are read with javascript (ReadText())
